Fix typo in site title and add paragraph

--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ოთო კუკუნაშვილი საიტი</h1>
+    <h1>ოთო კუკუნაშვილის საიტი</h1>
     <p>მოვიძიო HTML5/CSS3/JS-ის სემანტიკური დაკაბადონება</p>
+    <p>მაინქრაფტი</p>
+    
 </body>
 </html>
