--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <h1>ოთო კუკუნაშვილის საიტი</h1>
     <p>მოვიძიო HTML5/CSS3/JS-ის სემანტიკური დაკაბადონება</p>
-    <p>მაინქრაფტი</p>
+    <p>მაინქრაფტი და იური დებილია</p>
     
 </body>
 </html>
