--- a/index.html
+++ b/index.html
@@ -1,26 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./style.css" />
+  </head>
 
-</head>
-
-<body>
-    <header>
-        header
-    </header>
+  <body>
+    <header>header</header>
     <nav>
-        <a href="">Main</a>
-        <a href="">About</a>
-        <a href="">Contact</a>
+      <a href="">Main</a>
+      <a href="">About</a>
+      <a href="">Contact</a>
     </nav>
     <p>მოვიძიო HTML5/CSS3/JS-ის სემანტიკური დაკაბადონება</p>
-
-
-</body>
-
-</html> 
+  </body>
+</html>
