--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <h1>ოთო კუკუნაშვილის საიტი</h1>
+    <header>
+        header
+    </header>
+    <nav>
+        <a href="">Main</a>
+        <a href="">About</a>
+        <a href="">Contact</a>
+    </nav>
     <p>მოვიძიო HTML5/CSS3/JS-ის სემანტიკური დაკაბადონება</p>
-    
-    
+
+
 </body>
-</html>
+
+</html> 
